// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> Snapshots should match snapshot with error type 1`] = `
.c7 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 7px 20px 5px;
  min-width: 70px;
  font-size: 12px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #fefefe;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #fefefe;
}

.c7:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #dfdfdf;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #dfdfdf;
  pointer-events: none;
}

.c7:disabled {
  color: #848584;
  background-color: #9a9e9c;
}

.c7:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c7:active {
  padding: 8 20 4;
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #848584;
  border-right-color: #fefefe;
  border-bottom-color: #fefefe;
  border-left-color: #848584;
}

.c7:active:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #0a0a0a;
  border-right-color: #dfdfdf;
  border-bottom-color: #dfdfdf;
  border-left-color: #0a0a0a;
  pointer-events: none;
}

.c7:not(:last-child) {
  margin-right: 6px;
}

.c1 {
  position: relative;
  border-width: 1px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  box-shadow: inset -1px -1px 0 0px  #848584 , inset 1px 1px 0 0px  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c2 {
  height: 20px;
  padding: 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7f787f;
  color: #c6c6c6;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c5:first-child {
  margin-right: 0;
}

.c8 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-size: 10px;
  font-weight: 600;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 2px;
}

.c13 {
  padding: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 .c6 {
  margin-left: 6px;
  min-width: 70px;
}

.c13 .c6:first-child {
  margin-left: 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  background-repeat: no-repeat;
  background-size: 70%;
  height: 45px;
  width: 45px;
  background-position: center;
  margin-right: 10px;
  background-image: url(test-file-stub);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(362px,304px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <h1
          class="c3"
        >
          Error
        </h1>
        <ul
          class="c4"
        >
          <li
            class="c5"
          >
            <button
              class="c6 c7 c8"
            >
              ?
            </button>
          </li>
          <li
            class="c5"
          >
            <button
              class="c6 c7 c8"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <div
            class="c11"
            type="error"
          />
          <div
            class="c12"
          >
            Error
          </div>
        </div>
      </div>
      <div
        class="c13"
      >
        <button
          class="c6 c7"
          font-size="12px"
          value="OK"
        >
          OK
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`<Alert /> Snapshots should match snapshot with info type 1`] = `
.c7 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 7px 20px 5px;
  min-width: 70px;
  font-size: 12px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #fefefe;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #fefefe;
}

.c7:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #dfdfdf;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #dfdfdf;
  pointer-events: none;
}

.c7:disabled {
  color: #848584;
  background-color: #9a9e9c;
}

.c7:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c7:active {
  padding: 8 20 4;
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #848584;
  border-right-color: #fefefe;
  border-bottom-color: #fefefe;
  border-left-color: #848584;
}

.c7:active:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #0a0a0a;
  border-right-color: #dfdfdf;
  border-bottom-color: #dfdfdf;
  border-left-color: #0a0a0a;
  pointer-events: none;
}

.c7:not(:last-child) {
  margin-right: 6px;
}

.c1 {
  position: relative;
  border-width: 1px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  box-shadow: inset -1px -1px 0 0px  #848584 , inset 1px 1px 0 0px  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c2 {
  height: 20px;
  padding: 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7f787f;
  color: #c6c6c6;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c5:first-child {
  margin-right: 0;
}

.c8 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-size: 10px;
  font-weight: 600;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 2px;
}

.c13 {
  padding: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 .c6 {
  margin-left: 6px;
  min-width: 70px;
}

.c13 .c6:first-child {
  margin-left: 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  background-repeat: no-repeat;
  background-size: 70%;
  height: 45px;
  width: 45px;
  background-position: center;
  margin-right: 10px;
  background-image: url(test-file-stub);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(362px,304px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <h1
          class="c3"
        >
          Info
        </h1>
        <ul
          class="c4"
        >
          <li
            class="c5"
          >
            <button
              class="c6 c7 c8"
            >
              ?
            </button>
          </li>
          <li
            class="c5"
          >
            <button
              class="c6 c7 c8"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <div
            class="c11"
            type="info"
          />
          <div
            class="c12"
          >
            Info
          </div>
        </div>
      </div>
      <div
        class="c13"
      >
        <button
          class="c6 c7"
          font-size="12px"
          value="OK"
        >
          OK
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`<Alert /> Snapshots should match snapshot with question type 1`] = `
.c7 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 7px 20px 5px;
  min-width: 70px;
  font-size: 12px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #fefefe;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #fefefe;
}

.c7:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #dfdfdf;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #dfdfdf;
  pointer-events: none;
}

.c7:disabled {
  color: #848584;
  background-color: #9a9e9c;
}

.c7:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c7:active {
  padding: 8 20 4;
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #848584;
  border-right-color: #fefefe;
  border-bottom-color: #fefefe;
  border-left-color: #848584;
}

.c7:active:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #0a0a0a;
  border-right-color: #dfdfdf;
  border-bottom-color: #dfdfdf;
  border-left-color: #0a0a0a;
  pointer-events: none;
}

.c7:not(:last-child) {
  margin-right: 6px;
}

.c1 {
  position: relative;
  border-width: 1px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  box-shadow: inset -1px -1px 0 0px  #848584 , inset 1px 1px 0 0px  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c2 {
  height: 20px;
  padding: 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7f787f;
  color: #c6c6c6;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c5:first-child {
  margin-right: 0;
}

.c8 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-size: 10px;
  font-weight: 600;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 2px;
}

.c13 {
  padding: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 .c6 {
  margin-left: 6px;
  min-width: 70px;
}

.c13 .c6:first-child {
  margin-left: 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  background-repeat: no-repeat;
  background-size: 70%;
  height: 45px;
  width: 45px;
  background-position: center;
  margin-right: 10px;
  background-image: url(test-file-stub);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(362px,304px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <h1
          class="c3"
        >
          question
        </h1>
        <ul
          class="c4"
        >
          <li
            class="c5"
          >
            <button
              class="c6 c7 c8"
            >
              ?
            </button>
          </li>
          <li
            class="c5"
          >
            <button
              class="c6 c7 c8"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <div
            class="c11"
            type="question"
          />
          <div
            class="c12"
          >
            question
          </div>
        </div>
      </div>
      <div
        class="c13"
      >
        <button
          class="c6 c7"
          font-size="12px"
          value="OK"
        >
          OK
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`<Alert /> Snapshots should match snapshot with warning type 1`] = `
.c7 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 7px 20px 5px;
  min-width: 70px;
  font-size: 12px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #fefefe;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #fefefe;
}

.c7:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #dfdfdf;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #dfdfdf;
  pointer-events: none;
}

.c7:disabled {
  color: #848584;
  background-color: #9a9e9c;
}

.c7:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c7:active {
  padding: 8 20 4;
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #848584;
  border-right-color: #fefefe;
  border-bottom-color: #fefefe;
  border-left-color: #848584;
}

.c7:active:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #0a0a0a;
  border-right-color: #dfdfdf;
  border-bottom-color: #dfdfdf;
  border-left-color: #0a0a0a;
  pointer-events: none;
}

.c7:not(:last-child) {
  margin-right: 6px;
}

.c1 {
  position: relative;
  border-width: 1px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  box-shadow: inset -1px -1px 0 0px  #848584 , inset 1px 1px 0 0px  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c2 {
  height: 20px;
  padding: 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7f787f;
  color: #c6c6c6;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c5:first-child {
  margin-right: 0;
}

.c8 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-size: 10px;
  font-weight: 600;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 2px;
}

.c13 {
  padding: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 .c6 {
  margin-left: 6px;
  min-width: 70px;
}

.c13 .c6:first-child {
  margin-left: 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  background-repeat: no-repeat;
  background-size: 70%;
  height: 45px;
  width: 45px;
  background-position: center;
  margin-right: 10px;
  background-image: url(test-file-stub);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(362px,304px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <h1
          class="c3"
        >
          Warning
        </h1>
        <ul
          class="c4"
        >
          <li
            class="c5"
          >
            <button
              class="c6 c7 c8"
            >
              ?
            </button>
          </li>
          <li
            class="c5"
          >
            <button
              class="c6 c7 c8"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <div
            class="c11"
            type="warning"
          />
          <div
            class="c12"
          >
            Warning
          </div>
        </div>
      </div>
      <div
        class="c13"
      >
        <button
          class="c6 c7"
          font-size="12px"
          value="OK"
        >
          OK
        </button>
      </div>
    </section>
  </div>
</div>
`;
